@@ -31,28 +31,37 @@ class QwenTestHelper {
     }
 
     public static Stream<Arguments> nonMultimodalChatModelNameProvider() {
-        return Stream.of(Arguments.of(QwenModelName.QWEN3_MAX));
+        return Stream.of(Arguments.of(QwenModelName.QWEN3_MAX), Arguments.of(QwenModelName.QWEN3_5_PLUS));
     }
 
     public static Stream<Arguments> reasoningChatModelNameProvider() {
         // Only streaming output is supported.
-        return Stream.of(Arguments.of(QwenModelName.QWEN3_MAX));
+        return Stream.of(Arguments.of(QwenModelName.QWEN3_MAX), Arguments.of(QwenModelName.QWEN3_5_PLUS));
     }
 
     public static Stream<Arguments> functionCallChatModelNameProvider() {
+        return Stream.of(Arguments.of(QwenModelName.QWEN3_MAX), Arguments.of(QwenModelName.QWEN3_5_PLUS));
+    }
+
+    public static Stream<Arguments> searchingChatModelNameProvider() {
         return Stream.of(Arguments.of(QwenModelName.QWEN3_MAX));
     }
 
-    public static Stream<Arguments> vlChatModelNameProvider() {
-        return Stream.of(Arguments.of(QwenModelName.QWEN3_VL_FLASH));
+    public static Stream<Arguments> multimodalChatModelNameProvider() {
+        return Stream.of(Arguments.of(QwenModelName.QWEN3_VL_FLASH), Arguments.of(QwenModelName.QWEN3_5_PLUS));
     }
 
     public static Stream<Arguments> mtChatModelNameProvider() {
         return Stream.of(Arguments.of(QwenModelName.QWEN_MT_FLASH));
     }
 
-    public static Stream<Arguments> audioChatModelNameProvider() {
-        return Stream.of(Arguments.of(QwenModelName.QWEN_AUDIO_TURBO));
+    public static Stream<Arguments> asrChatModelNameProvider() {
+        return Stream.of(Arguments.of(QwenModelName.QWEN3_ASR_FLASH));
+    }
+
+    public static Stream<Arguments> ttsChatModelNameProvider() {
+        return Stream.of(
+                Arguments.of(QwenModelName.QWEN3_TTS_FLASH), Arguments.of(QwenModelName.QWEN3_TTS_INSTRUCT_FLASH));
     }
 
     public static Stream<Arguments> embeddingModelNameProvider() {
@@ -110,9 +119,9 @@ class QwenTestHelper {
                 .url("https://dashscope.oss-cn-beijing.aliyuncs.com/audios/welcome.mp3")
                 .build();
         AudioContent audioContent = AudioContent.from(audio);
-        TextContent textContent =
-                TextContent.from("What is this audio saying? Please note that the audio language is Chinese.");
-        return Collections.singletonList(UserMessage.from(audioContent, textContent));
+        SystemMessage systemMessage =
+                SystemMessage.from("What is this audio saying? Please note that the audio language is Chinese.");
+        return List.of(systemMessage, UserMessage.from(audioContent));
     }
 
     public static List<ChatMessage> multimodalChatMessagesWithAudioData() {
@@ -121,9 +130,9 @@ class QwenTestHelper {
                 .mimeType("audio/mp3")
                 .build();
         AudioContent audioContent = AudioContent.from(audio);
-        TextContent textContent =
-                TextContent.from("What is this audio saying? Please note that the audio language is Chinese.");
-        return Collections.singletonList(UserMessage.from(audioContent, textContent));
+        SystemMessage systemMessage =
+                SystemMessage.from("What is this audio saying? Please note that the audio language is Chinese.");
+        return List.of(systemMessage, UserMessage.from(audioContent));
     }
 
     public static String multimodalAudioData() {
@@ -153,7 +162,7 @@ class QwenTestHelper {
         return getBase64DataFromResource("/parrot.mp4");
     }
 
-    private static String getBase64DataFromResource(String path) {
+    static String getBase64DataFromResource(String path) {
         ByteArrayOutputStream buffer = new ByteArrayOutputStream();
         try (InputStream in = QwenTestHelper.class.getResourceAsStream(path)) {
             assertThat(in).isNotNull();
